# wcm

./: .gitmodules  LICENSE  README.md  meson.build  meson_options.txt  wayfire-config-manager.cpp  wayfire-config-manager.desktop
.github/workflows/: ci.yaml
icons/: meson.build
icons/desktop/: meson.build
icons/plugins/: meson.build
locale/: meson.build  wcm.pot
locale/es_ES/LC_MESSAGES/: wcm.po
locale/ro/LC_MESSAGES/: wcm.po
locale/ro_RO/LC_MESSAGES/: wcm.mo  wcm.po
locale/zh_CN/LC_MESSAGES/: wcm.po
metadata/: alpha.xml  animate.xml  autorotate-iio.xml  autostart.xml  background.xml  blur.xml  command.xml  core.xml  cube.xml  decoration.xml  dock.xml  example.xml  expo.xml  fast-switcher.xml  fisheye.xml  grid.xml  idle.xml  input.xml  invert.xml  matcher.xml  meson.build  move.xml  oswitch.xml  panel.xml  place.xml  resize.xml  rotator.xml  simple-tile.xml  switcher.xml  test.xml  tile.xml  vswipe.xml  vswitch.xml  wobbly.xml  workarounds.xml  wrot.xml  zoom.xml
proto/: meson.build
src/: main.cpp  meson.build  metadata.cpp  metadata.hpp  pages.cpp  utils.cpp  utils.hpp  wcm.cpp  wcm.h  wcm.hpp
