install_data('plugin-animate.svg', install_dir: icon_dir)
install_data('plugin-core.svg', install_dir: icon_dir)
install_data('plugin-cube.svg', install_dir: icon_dir)
install_data('plugin-expo.svg', install_dir: icon_dir)
install_data('plugin-fisheye.svg', install_dir: icon_dir)
install_data('plugin-grid.svg', install_dir: icon_dir)
install_data('plugin-move.svg', install_dir: icon_dir)
install_data('plugin-place.svg', install_dir: icon_dir)
install_data('plugin-resize.svg', install_dir: icon_dir)
install_data('plugin-switcher.svg', install_dir: icon_dir)
install_data('plugin-tile.svg', install_dir: icon_dir)
install_data('plugin-vswitch.svg', install_dir: icon_dir)
install_data('plugin-wobbly.svg', install_dir: icon_dir)
install_data('plugin-wrot.svg', install_dir: icon_dir)
install_data('plugin-zoom.svg', install_dir: icon_dir)
