install_data('alpha.xml', install_dir: metadata_dir)
install_data('animate.xml', install_dir: metadata_dir)
install_data('blur.xml', install_dir: metadata_dir)
install_data('core.xml', install_dir: metadata_dir)
install_data('cube.xml', install_dir: metadata_dir)
install_data('expo.xml', install_dir: metadata_dir)
install_data('fast-switcher.xml', install_dir: metadata_dir)
install_data('fisheye.xml', install_dir: metadata_dir)
install_data('grid.xml', install_dir: metadata_dir)
install_data('input.xml', install_dir: metadata_dir)
install_data('move.xml', install_dir: metadata_dir)
install_data('oswitch.xml', install_dir: metadata_dir)
install_data('place.xml', install_dir: metadata_dir)
install_data('resize.xml', install_dir: metadata_dir)
install_data('rotator.xml', install_dir: metadata_dir)
install_data('switcher.xml', install_dir: metadata_dir)
install_data('vswitch.xml', install_dir: metadata_dir)
install_data('wobbly.xml', install_dir: metadata_dir)
install_data('wrot.xml', install_dir: metadata_dir)
install_data('zoom.xml', install_dir: metadata_dir)
