install_data('alpha.xml', install_dir: metadata_dir)
install_data('autorotate-iio.xml', install_dir: metadata_dir)
install_data('autostart.xml', install_dir: metadata_dir)
install_data('animate.xml', install_dir: metadata_dir)
install_data('background.xml', install_dir: metadata_dir)
install_data('blur.xml', install_dir: metadata_dir)
install_data('command.xml', install_dir: metadata_dir)
install_data('core.xml', install_dir: metadata_dir)
install_data('cube.xml', install_dir: metadata_dir)
install_data('decoration.xml', install_dir: metadata_dir)
install_data('dock.xml', install_dir: metadata_dir)
install_data('expo.xml', install_dir: metadata_dir)
install_data('fast-switcher.xml', install_dir: metadata_dir)
install_data('fisheye.xml', install_dir: metadata_dir)
install_data('grid.xml', install_dir: metadata_dir)
install_data('idle.xml', install_dir: metadata_dir)
install_data('input.xml', install_dir: metadata_dir)
install_data('invert.xml', install_dir: metadata_dir)
install_data('matcher.xml', install_dir: metadata_dir)
install_data('move.xml', install_dir: metadata_dir)
install_data('oswitch.xml', install_dir: metadata_dir)
install_data('panel.xml', install_dir: metadata_dir)
install_data('place.xml', install_dir: metadata_dir)
install_data('resize.xml', install_dir: metadata_dir)
install_data('simple-tile.xml', install_dir: metadata_dir)
install_data('switcher.xml', install_dir: metadata_dir)
install_data('vswipe.xml', install_dir: metadata_dir)
install_data('vswitch.xml', install_dir: metadata_dir)
install_data('wobbly.xml', install_dir: metadata_dir)
install_data('workarounds.xml', install_dir: metadata_dir)
install_data('wrot.xml', install_dir: metadata_dir)
install_data('zoom.xml', install_dir: metadata_dir)
