install_data('wcm.png', install_dir: icon_dir)
install_data(join_paths('48x48', 'wcm.png'), install_dir: join_paths(share_dir, 'icons', 'hicolor', '48x48', 'apps'))
install_data(join_paths('64x64', 'wcm.png'), install_dir: join_paths(share_dir, 'icons', 'hicolor', '64x64', 'apps'))
install_data(join_paths('72x72', 'wcm.png'), install_dir: join_paths(share_dir, 'icons', 'hicolor', '72x72', 'apps'))
install_data(join_paths('96x96', 'wcm.png'), install_dir: join_paths(share_dir, 'icons', 'hicolor', '96x96', 'apps'))
install_data(join_paths('128x128', 'wcm.png'), install_dir: join_paths(share_dir, 'icons', 'hicolor', '128x128', 'apps'))
install_data(join_paths('160x160', 'wcm.png'), install_dir: join_paths(share_dir, 'icons', 'hicolor', '160x160', 'apps'))
install_data(join_paths('192x192', 'wcm.png'), install_dir: join_paths(share_dir, 'icons', 'hicolor', '192x192', 'apps'))