install_data('plugin-alpha.svg', install_dir: icon_dir)
install_data('plugin-animate.svg', install_dir: icon_dir)
install_data('plugin-autorotate-iio.svg', install_dir: icon_dir)
install_data('plugin-autostart.svg', install_dir: icon_dir)
install_data('plugin-background.svg', install_dir: icon_dir)
install_data('plugin-blur.svg', install_dir: icon_dir)
install_data('plugin-command.svg', install_dir: icon_dir)
install_data('plugin-core.svg', install_dir: icon_dir)
install_data('plugin-cube.svg', install_dir: icon_dir)
install_data('plugin-decoration.svg', install_dir: icon_dir)
install_data('plugin-dock.svg', install_dir: icon_dir)
install_data('plugin-example.svg', install_dir: icon_dir)
install_data('plugin-expo.svg', install_dir: icon_dir)
install_data('plugin-fast-switcher.svg', install_dir: icon_dir)
install_data('plugin-fisheye.svg', install_dir: icon_dir)
install_data('plugin-grid.svg', install_dir: icon_dir)
install_data('plugin-idle.svg', install_dir: icon_dir)
install_data('plugin-input.svg', install_dir: icon_dir)
install_data('plugin-invert.svg', install_dir: icon_dir)
install_data('plugin-move.svg', install_dir: icon_dir)
install_data('plugin-oswitch.svg', install_dir: icon_dir)
install_data('plugin-panel.svg', install_dir: icon_dir)
install_data('plugin-place.svg', install_dir: icon_dir)
install_data('plugin-resize.svg', install_dir: icon_dir)
install_data('plugin-simple-tile.svg', install_dir: icon_dir)
install_data('plugin-switcher.svg', install_dir: icon_dir)
install_data('plugin-vswipe.svg', install_dir: icon_dir)
install_data('plugin-vswitch.svg', install_dir: icon_dir)
install_data('plugin-workarounds.svg', install_dir: icon_dir)
install_data('plugin-wobbly.svg', install_dir: icon_dir)
install_data('plugin-wrot.svg', install_dir: icon_dir)
install_data('plugin-zoom.svg', install_dir: icon_dir)
